--- a/public/st-admin/css/custom.css
+++ b/public/st-admin/css/custom.css
@@ -4273,6 +4273,18 @@ table thead .checkbox.radio { margin-top:-7px;margin-top:-21px; }
 .maxwform{
     max-width: 400px;
 }
+.list-student{
+    max-height: 40px;
+    overflow: hidden;
+}
+.list-student .badge{
+    font-size: 9px;
+    padding: 3px;
+}
+.list-course-td{
+    margin-bottom: 4px;
+    font-size: 12px;
+}
 .list-courses {
     border-bottom: 1px dotted;
     padding-bottom: 9px;
